--- a/src/css/ui/nav/index.css
+++ b/src/css/ui/nav/index.css
@@ -30,7 +30,7 @@
 
 #gnb .logo {
   width: 2.25rem;
-  background-image: url("/src/images/apple-logo.png");
+  background-image: url("./src/images/apple-logo.png");
   background-position-x: -1.2rem;
   background-position-y: -0.1rem;
 }
@@ -48,7 +48,7 @@
 }
 
 #gnb .search {
-  background-image: url("/src/images/search.svg");
+  background-image: url("./src/images/search.svg");
   min-width: 1.2rem;
   background-position-x: 0;
   background-position-y: -0.1rem;
@@ -56,7 +56,7 @@
 }
 
 #gnb .shopping-bag {
-  background-image: url("/src/images/shopping-bag.svg");
+  background-image: url("./src/images/shopping-bag.svg");
   min-width: 1.2rem;
   background-position-x: 0;
   background-position-y: -0.1rem;
